# sudoku

Sudoku.hsproj/: .uuid
Sudoku.hsproj/Sudoku/: Main.hs  Sudoku.cabal  Sudoku.hs  _Main.hsplay  _Sudoku.hsplay
Sudoku.hsproj/Sudoku/solved/: scottish-life-2019-12-01-fiendish  scottish-life-2019-12-01-standard  scottish-life-2019-12-08-fiendish  scottish-life-2019-12-08-standard  scottish-life-2019-12-15-standard  scottish-life-2019-12-22-fiendish  scottish-life-2020-01-05-fiendish  sunday-national-2019-11-24-easy  sunday-national-2019-12-08-hard  sunday-national-2019-12-22-easy  sunday-national-2020-01-05-easy  sunday-national-2020-01-05-medium  sunday-national-2020-01-12-easy  sunday-national-2020-01-12-hard  sunday-national-2020-01-12-medium  the-national-2020-01-13-hard  the-national-2020-01-13-medium  thenational-2019-11-30-medium  thenational-2019-12-12-hard  thenational-2019-12-13-hard  thenational-2019-12-14-medium  thenational-2019-12-19-hard  thenational-2019-12-20-medium  thenational-2019-12-23-hard  thenational-2019-12-23-medium  thenational-2019-12-24-hard  thenational-2019-12-24-medium  thenational-2019-12-31-medium  thenational-2020-01-03-hard  thenational-2020-01-03-medium  thenational-2020-01-04-medium  thenational-2020-01-06-medium  thenational-2020-01-09-hard  thenational-2020-01-10-hard  thenational-2020-01-10-medium  thenational-2020-01-11-hard  thenational-2020-01-11-medium
Sudoku.hsproj/Sudoku/unsolved/: thenational-2019-11-30-hard  thenational-2019-12-14-hard  thenational-2019-12-20-hard  thenational-2020-01-08-hard
test/hardest/: hardest
(+92 files in other folders)
