cabal-version: 2.4
name: Sudoku
version: 1.0
stability: experimental
x-ghc-framework-version: 8.6.4-13.14-2
x-last-ide-version: HfM1.7.0
extra-source-files:
    "unsolved/thenational 2020-01-06 hard.txt"
    multiple-solutions/acb1.txt

executable sudoku
    main-is: Main.hs
    other-modules:
        Sudoku
    default-language: Haskell2010
    build-depends:
        base -any,
        array -any,
        split -any
